--- a/dummy.html
+++ b/dummy.html
@@ -152,6 +152,8 @@
 			<ul>
 				<li><a href="#">Link 1</a></li>
 				<li><a href="#">Link 2</a></li>
+				<li><a href="#">Link 3</a></li>
+
 			</ul>
 			<h3>Left heading</h3>
 			<ul>
